sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:18: error: ')' expected but integer literal found.
	}while(ecart>(Double)1 || test)
                             ^